--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -33,15 +33,15 @@
                   <TextField prefHeight="25.0" prefWidth="110.0" />
                   <Label text="Возраст" />
                   <TextField prefHeight="25.0" prefWidth="85.0" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Добавить" />
+                  <Button fx:id="addBtn" onAction="#addQuery" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Добавить" />
                   <Label layoutX="10.0" layoutY="14.0" text="ФИО" />
                   <TextField layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="238.0" />
-                  <Button layoutX="286.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Удалить" />
+                  <Button fx:id="remBtn" onAction="#remQuery" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Удалить" />
                   <Label layoutX="10.0" layoutY="14.0" text="ФИО" />
                   <TextField layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="110.0" />
                   <Label layoutX="148.0" layoutY="14.0" text="Возраст" />
                   <TextField layoutX="176.0" layoutY="10.0" prefHeight="25.0" prefWidth="85.0" />
-                  <Button layoutX="286.0" layoutY="10.0" mnemonicParsing="false" text="Обновить" />
+                  <Button fx:id="updBtn" onAction="#updQuery" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" text="Обновить" />
                </children>
             </FlowPane>
             <ScrollPane prefHeight="407.0" prefWidth="338.0">
