--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -30,17 +30,17 @@
             <FlowPane prefHeight="102.0" prefWidth="338.0">
                <children>
                   <Label text="ФИО" />
-                  <TextField prefHeight="25.0" prefWidth="110.0" />
+                  <TextField fx:id="fio1" prefHeight="25.0" prefWidth="110.0" />
                   <Label text="Возраст" />
-                  <TextField prefHeight="25.0" prefWidth="85.0" />
+                  <TextField fx:id="age1" prefHeight="25.0" prefWidth="85.0" />
                   <Button fx:id="addBtn" onAction="#addQuery" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Добавить" />
                   <Label layoutX="10.0" layoutY="14.0" text="ФИО" />
-                  <TextField layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="238.0" />
+                  <TextField fx:id="fio2" layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="238.0" />
                   <Button fx:id="remBtn" onAction="#remQuery" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Удалить" />
                   <Label layoutX="10.0" layoutY="14.0" text="ФИО" />
-                  <TextField layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="110.0" />
+                  <TextField fx:id="fio3" layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="110.0" />
                   <Label layoutX="148.0" layoutY="14.0" text="Возраст" />
-                  <TextField layoutX="176.0" layoutY="10.0" prefHeight="25.0" prefWidth="85.0" />
+                  <TextField fx:id="age3" layoutX="176.0" layoutY="10.0" prefHeight="25.0" prefWidth="85.0" />
                   <Button fx:id="updBtn" onAction="#updQuery" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" text="Обновить" />
                </children>
             </FlowPane>
