--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane alignment="center" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171"
-          fx:controller="sample.Controller">
+<GridPane alignment="center" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
@@ -27,21 +26,22 @@
    <children>
       <VBox prefHeight="463.0" prefWidth="338.0" GridPane.columnIndex="1">
          <children>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="336.0" textAlignment="JUSTIFY" />
             <FlowPane prefHeight="102.0" prefWidth="338.0">
                <children>
                   <Label text="ФИО" />
                   <TextField fx:id="fio1" prefHeight="25.0" prefWidth="110.0" />
                   <Label text="Возраст" />
                   <TextField fx:id="age1" prefHeight="25.0" prefWidth="85.0" />
-                  <Button fx:id="addBtn" onAction="#addQuery" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Добавить" />
+                  <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addQuery" prefHeight="25.0" prefWidth="71.0" text="Добавить" />
                   <Label layoutX="10.0" layoutY="14.0" text="ФИО" />
                   <TextField fx:id="fio2" layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="238.0" />
-                  <Button fx:id="remBtn" onAction="#remQuery" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Удалить" />
+                  <Button fx:id="remBtn" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" onAction="#remQuery" prefHeight="25.0" prefWidth="71.0" text="Удалить" />
                   <Label layoutX="10.0" layoutY="14.0" text="ФИО" />
                   <TextField fx:id="fio3" layoutX="38.0" layoutY="10.0" prefHeight="25.0" prefWidth="110.0" />
                   <Label layoutX="148.0" layoutY="14.0" text="Возраст" />
                   <TextField fx:id="age3" layoutX="176.0" layoutY="10.0" prefHeight="25.0" prefWidth="85.0" />
-                  <Button fx:id="updBtn" onAction="#updQuery" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" text="Обновить" />
+                  <Button fx:id="updBtn" layoutX="286.0" layoutY="10.0" mnemonicParsing="false" onAction="#updQuery" text="Обновить" />
                </children>
             </FlowPane>
             <ScrollPane prefHeight="407.0" prefWidth="338.0">
